Lots of stuff, cleanup in AlpmHandler, and Dependency functions.

--- a/trunk/TODO
+++ b/trunk/TODO
@@ -17,6 +17,7 @@ Throw all relevant packages informations into the QTreeWidgetItem (missing now: 
 More icons
 Splitter-positioning is a bit bad at the moment 
 Same with QTreeWidgetItem-columns ;)
+Add a clear button in the searchbar, something like kickoff's one, if possible :)
 Complete PkgDetails *prio*
 All action-button-actions in context-menu
 Connect all buttons to actions
