--- a/trunk/TODO
+++ b/trunk/TODO
@@ -14,7 +14,7 @@ Add a clear button in the searchbar, something like kickoff's one, if possible :
 Complete PkgDetails *prio* ---> Needed: size
 All action-button-actions in context-menu *prio*
 Configuration-dialog *prio*
-System-Tray-Icon *prio* --->Mostly done, only a few missing things (change icon, if there are upgradeable packages) We need to redesign it...
+System-Tray-Icon *prio* --->Mostly done, in some cases needs better handling
 Plasmoid *prio*
 
 
