--- a/trunk/shaman/README
+++ b/trunk/shaman/README
@@ -38,6 +38,12 @@ your queue from source, thanks to its tight integration with abs
 and makepkg. Not only, Shaman will keep you updated automatically by
 notifying you when upgrades are available when it sits in the system
 tray.
+But this doesn't stop here: Shaman has an integrated very simple RSS
+reader for Arch Linux news, and will notify you if an unread news
+is about a package in your queue.
+Last but not least, Shaman also features a log viewer for the current
+pacman log file, allowing you to search through your logs quickly
+in a pair of clicks. Shaman also logs the same infos as pacman.
 
 1.3 Extending Usability
 
@@ -64,8 +70,8 @@ Refer to the INSTALL file for details
 There are a lot of people and efforts behind Shaman. Shaman is being
 actively developed by Dario Freddi and Lukas Appelhans, and grew up
 in the KDEMod community (kdemod.ath.cx), that helped a lot in testing,
-in giving Shaman a name (thanks mainly to uzbirglones for that), hosting
-(thanks to Phinnfort) and anything else, including support :)
+in giving Shaman a name (thanks mainly to Rodrigo for that), hosting
+(thanks to Martin) and anything else, including support :)
 
 -------------------------------------------------------------------------
 
