--- a/trunk/shaman/CHANGELOG
+++ b/trunk/shaman/CHANGELOG
@@ -39,6 +39,7 @@ GUI:
    - Removed version hardcoding in the About Dialog to allow String Freeze
    - Added a stupid message to the About Dialog
    - Small GUI fixes (thanks to uwolfer)
+   - Added a small delay to search when typing in the line edit
    
 i18n:
    - Added Chinese translation
