--- a/trunk/shaman/CHANGELOG
+++ b/trunk/shaman/CHANGELOG
@@ -78,3 +78,4 @@ Core:
    - Fixed bug when Adding Upgradeable packages to Queue (bug #39)
    - Fixed the empty Upgrade dialog bug
    - Added the possibility to switch off the animated Icon
+   - Fixed speed regression when loading packages
