I have to remember that I need to commit what I do @ night ^^

--- a/trunk/shaman/CHANGELOG
+++ b/trunk/shaman/CHANGELOG
@@ -87,7 +87,11 @@ RC2 -->
 
 GUI:
    - Fixed small detail in Queue Dialog
+   - Fixed unsafe code in UpdateDbDialog
 
 i18n:
    - Added Czech Translation
+
+Runner:
+   - Improved .desktop file to be more consistent
 
