First 1.1 new feature

--- a/branches/1.1/CHANGELOG
+++ b/branches/1.1/CHANGELOG
@@ -1,113 +1,4 @@
-Beta 1 --> Beta 2:
+ChangeLog from 1.0:
 
 Core:
-  - Fixed repositories update when adding/removing repositories from configDialog
-  - Updated support for ABS, now only 2.0+ is supported
-  - Better translation Loading
-  - Provider handling improvements
-  - General Fixes
-  - Moved definitions to config.h
-
-GUI:
-  - Fixed dialog Sizes and improved usability in review Dialogs
-  - Added keyboard shortcuts
-  - Some look & feel improvements
-  - Multiple package selection
-  - Fixes here and There
-
-News Dialog:
-  - Fixed the bug that shown first news always new and unread
-  - Improved browser handling
-  - Fixed dialog resizing
-  
-KRunner:
-  - Added support for Multiple packages ("i <package> <package>...")
-
-
-Beta 2  --> Beta 3
-
-Core:
-
-   - Better version handling
-   - Correct Handling of packages with the same name belonging to different repos
-   - Added support for updating the database everyday at a certain hour
-   - Better Tray Icon Handling
-   - Support for "Add upgradeable to Queue"
-   - Solved a bug that caused freezing or loading failed
-   - Added force (pacman -f) option
-
-GUI:
-   - Removed version hardcoding in the About Dialog to allow String Freeze
-   - Added a stupid message to the About Dialog
-   - Small GUI fixes (thanks to uwolfer)
-   - Added a small delay to search when typing in the line edit
-   
-i18n:
-   - Added Chinese translation
-   
-Plasmoid:
-   - Basic functionalities added
-   
-Runner:
-   - Port the Runner to the new API syntax
-
-
-Beta 3  --> RC 1
-
-Core:
-   - Better Thread handling when reloading packages view
-   - Corrected include guards
-   - Removed introspection in DBus system due to some custom code needed
-   
-GUI:
-   - Faster startup and no freezes thanks to better Thread Handling
-   - Avoid Horizontal stretching in Queue Dialog
-   - Port Messages to Utf8 where possible.
-   - Fixed sorting by size bug
-
-KRunner:
-   - Fixed and stabilized for new Plasma API. The Runner now works in KDE4.1
-
-Plasmoid:
-   - Added Autocompletion for Packages
-
-
-RC1  --> RC2
-
-Core:
-   - Fixed bug when Adding Upgradeable packages to Queue (bug #39)
-   - Fixed the empty Upgrade dialog bug
-   - Added the possibility to switch off the animated Icon
-   - Fixed speed regression when loading packages
-
-GUI:
-   - Packages are now refined when reloaded.
-
-RC2 --> 1.0.0
-
-Core:
-   - Removed unsafe casts
-   - Fixed some floating point issues
-   - Added support for local mirrors (file://)
-   - Added support for installing packages from command line "shaman <package name>"
-   - Reintroduced DBus introspection, now QStringLists are handled by introspection itself
-
-GUI:
-   - Fixed small detail in Queue Dialog
-   - Fixed unsafe code in UpdateDbDialog
-
-i18n:
-   - Added Czech Translation
-   - Added Norwegian Translation
-   - Added Dutch translation
-
-Runner:
-   - Improved .desktop file to be more consistent
-   
-Plasmoid:
-   - Added Drag & Drop support for packages
-   - Fixed Crashes when Changing views
-   - Fixed Size Troubles
-   - Fixed Crash on unload
-   - All those lines to say: we have a cool, working plasmoid, I was losing faith in it :)
-
+    - Added a brand new dialog for installing local packages
